<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.SellProduceFragment">

    <TextView
        android:id="@+id/mandi"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="35sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/mandi" android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/layout_seller_name"
        app:layout_constraintTop_toBottomOf="@id/mandi"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/linearLayoutStyle">
        <TextView
            android:text="@string/seller_name"
           style="@style/labelStyle"/>
        <EditText
            android:singleLine="true"
            android:id="@+id/seller_name"
            android:hint="@string/seller_name"
            style="@style/inputDataStyle"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_loyalty_card"
        app:layout_constraintTop_toBottomOf="@id/layout_seller_name"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/linearLayoutStyle">
        <TextView
            android:text="@string/loyalty_card_identifier"
            style="@style/labelStyle"/>
        <EditText
            android:singleLine="true"
            android:id="@+id/loyalty_card_id"
            android:hint="@string/loyalty_card_identifier"
            style="@style/inputDataStyle"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_village"
        app:layout_constraintTop_toBottomOf="@id/layout_loyalty_card"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/linearLayoutStyle">
        <TextView
            android:text="@string/village"
            style="@style/labelStyle"/>
        <Spinner
            android:padding="0dp"
            android:id="@+id/spinner_village"
            android:text="@string/seller_name"
            style="@style/inputDataStyle"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_gross_weight"
        app:layout_constraintTop_toBottomOf="@id/layout_village"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/linearLayoutStyle">
        <TextView
            android:text="@string/gross_weight"
            style="@style/labelStyle"/>
        <RelativeLayout
            android:padding="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:textStyle="italic"
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/tonnes"
                android:background="@null"
                android:hint="@string/gross_weight"
                android:inputType="numberDecimal"
                android:maxLength="5"
                android:singleLine="true" />
            <TextView
                android:id="@+id/tonnes"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/tonnes"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                style="@style/labelStyle"/>
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:layout_marginTop="30dp"
        android:id="@+id/gross_price_label"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/layout_gross_weight"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/gross_price"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/_0_00_inr"
        android:layout_marginTop="30dp"
        android:id="@+id/gross_price_data"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_gross_weight"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/applied_loyalty_index"
        android:layout_width="wrap_content"
        android:textColor="@color/green"
        app:layout_constraintTop_toBottomOf="@id/gross_price_label"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/applied_index_low"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatButton
        android:text="@string/sell_my_produce"
       style="@style/buttonStyle"
        android:id="@+id/sell_produce"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/applied_loyalty_index"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
